--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,7 +17,27 @@
 	--thm-gray-rgb: 123, 134, 241;
 }
 
-
+.pad-5{
+	padding: 2px 10px;
+	
+}
+.lineN{
+	line-height: normal;
+}
+.navA{
+	color: var(--thm-black);
+    font-family: var(--heading-font);
+    word-break: break-all;
+    -webkit-transition: all 500ms ease;
+    transition: all 500ms ease;
+}
+.flex{
+	display: flex;
+	align-items: center;
+}
+.pad-right{
+	margin-right: 10px;
+}
 body {
 	font-family: var(--thm-font);
 	color: #5f5f5f;
@@ -1015,9 +1035,9 @@ h6 {
 	padding-bottom: 11.5px;
 }
 
-.main-nav__two .main-nav__navigation-box>li.current>a {
+/* .main-nav__two .main-nav__navigation-box>li.current>a {
 	color: var(--thm-base);
-}
+} */
 
 .main-nav__two .main-nav__navigation-box>li.dropdown>a::after {
 	content: '\f107';
@@ -1171,7 +1191,7 @@ h6 {
 	transition: 500ms;
 }
 
-.site-header-two__home-four .main-nav__two .main-nav__navigation-box>li.current>a,
+/* .site-header-two__home-four .main-nav__two .main-nav__navigation-box>li.current>a, */
 .site-header-two__home-four .main-nav__two .main-nav__navigation-box>li.current-menu-item>a,
 .site-header-two__home-four .main-nav__two .main-nav__navigation-box>li:hover>a {
 	color: var(--thm-base);
@@ -1207,13 +1227,15 @@ h6 {
 	transition: 500ms;
 }
 
-.secondHeader  .main-nav__navigation-box>li:hover>a,
-.secondHeader  .main-nav__navigation-box>li.current>a {
-	color: #83beff !important;
+.secondHeader  .main-nav__navigation-box>li:hover>a
+.secondHeader  .main-nav__navigation-box>li.current>a 
+{
+	/* color: #83beff !important; */
 }
 
-.site-header-five__wrapper .main-nav__two .main-nav__navigation-box>li:hover>a,
-.site-header-five__wrapper .main-nav__two .main-nav__navigation-box>li.current>a {
+.site-header-five__wrapper .main-nav__two .main-nav__navigation-box>li:hover>a
+/* .site-header-five__wrapper .main-nav__two .main-nav__navigation-box>li.current>a  */
+{
 	color: #033a7c;
 }
 
@@ -1221,8 +1243,9 @@ h6 {
 	background-color: #033a7c;
 }
 
-.site-header-five__wrapper .main-nav__two.stricked-menu .main-nav__navigation-box>li:hover>a,
-.site-header-five__wrapper .main-nav__two.stricked-menu .main-nav__navigation-box>li.current>a {
+.site-header-five__wrapper .main-nav__two.stricked-menu .main-nav__navigation-box>li:hover>a
+/* .site-header-five__wrapper .main-nav__two.stricked-menu .main-nav__navigation-box>li.current>a  */
+{
 	color: #83beff;
 }
 
